{{$NEXT}}

1.83    2014-12-24

- The last release did not include any of the generated zone files. Oops.

- Attempting to fix indexing of DateTime::TimeZone::Catalog on metacpan. No
  real code or zone changes.


1.82    2014-12-24

- Various changes to get tests passing and tools code working with blead. This
  includes fixing some "Redundant argument in sprintf" warnings that could
  occur in the DateTime test suite. Reported by Slaven Rezic. RT #10116.


1.81    2014-11-21

- Removed tests for Win32 code.


1.80    2014-11-16

- This distro no longer ships the DateTime::TimeZone::Local::Win32
  module. Instead, it depends on that module when you install
  DateTime::TimeZone on a Windows system machine.

- Tweaked the warning when loading a zone class from disk that was generated
  using a different Olson version than the current DateTime::TimeZone
  module. Previously, it said the loaded version was older, but all we know is
  that it's different. Reported by Karen Etheridge. RT #66097.


1.79    2014-11-11

- This release is based on version 2014j of the Olson database. This release
  only contemporary changes for Turks & Caicos.


1.78    2014-11-05

- Fix warnings from Perl 5.8.8 and before. Apparently it doesn't like when
  $SIG{__DIE__} is set to undef. Patch by Peter Rabbitson. GitHub PR #88.


1.77    2014-11-04

- Updated the mapping of Windows -> IANA time zones. Patch by David
  Pinkowitz. RT #10025.

- Replaced Class::Load with Module::Runtime, and replaced eval with Try::Tiny.


1.76    2014-10-26

- When searching for the local timezone we now look at /etc/timezone before
  /etc/localtime. The former is a much quicker check if it exists. Patch by
  Karen Etheridge. PR #3.

- The tools/parse_olson script now supports parsing the etcetera and systemv
  files. This is *not* enabled by default as it would generate zones that
  conflict with existing links for Etc/UTC and others. Patch by Alfie John. PR
  #1.


1.75    2014-09-30
