@@ -41,9 +41,3 @@ stopwords_file = .stopwords
 [Prereqs / DevelopRequires]
 Test::Output = 0
 Test::Taint = 0
-
-[OSPrereqs / MSWin32]
-DateTime::TimeZone::Local::Win32 = 0
-
-[OSPrereqs / hpux]
-DateTime::TimeZone::HPUX = 0
